@@ -1,3 +1,12 @@
+Tue Apr  7 16:55:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * java/jms/src/org/opendds/jms/DataWriterPair.java:
+
+          Added support for wait_for_acknowledgments.  This should
+          resolve the remainder of failing JMS compat tests due to
+          timing issues.  By default, the timeout is configured at
+          30 seconds.
+
 Tue Apr  7 16:05:36 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/GuidConverter.h:
